--- a/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
@@ -1,5 +1,6 @@
+{% from "externalLink.njk" import externalLink %}
 {% from "internalLink.njk" import internalLink %}
-{% from "./utilityMacros.njk" import downloadResponseLink %}
+{% from "./utilityMacros.njk" import downloadResponseLink, downloadTheirResponseLink %}
 
 {% macro statesPaidRejectedClaimantDashboard() %}
   {{ t('You’ve rejected the defendant’s admission.') }}
@@ -11,6 +12,8 @@
   {% else %}
     {{ statesPaidRejectedMediationNOClaimantClaimDetails(claim) }}
   {% endif %}
+
+  <p>{{ downloadTheirResponseLink(claim) }}</p>
 {% endmacro %}
 
 {% macro statesPaidRejectedMediationYESClaimantClaimDetails(claim) %}
@@ -19,8 +22,11 @@
   {% else %}
     {% set amount = claim.response.paymentDeclaration.paidAmount  %}
   {% endif %}
-  <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
-  <p>{{ t('You rejected the defendant’s admission of {{ amount }}.', { amount: amount | numeral }) }}</p>
+
+  <h2 class="heading-small">{{ t('You’ve rejected the defendant’s admission') }}</h2>
+  <p>{{ t('They said they owe {{ amount }}.', { amount: amount | numeral }) }}</p>
+  <p>{{ t('You’ve both agreed to try mediation. The Small Claims Mediation Service will contact you to arrange an appointment.') }}</p>
+  {{ externalLink('Find out how mediation works', 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
 {% endmacro %}
 
 {% macro statesPaidRejectedMediationNOClaimantClaimDetails(claim) %}
@@ -53,13 +59,9 @@
   {% if mediation %}
     <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
   {% else %}
-    <h2 class="heading-small">{{ t('Wait for the court to review the case') }}</h2>
+    <h2 class="heading-small">{{ t('The claimant has rejected your admission of {{ amount }}', { amount: amount | numeral}) }}</h2>
   {% endif %}
 
-  <p>{{ t('{{ claimantName }} rejected your admission of {{ amount }}.', {
-      claimantName: claim.claimData.claimant.name,
-      amount: amount | numeral
-    }) }}</p>
   <p>{{ t('They said you didn’t pay them {{ amount }}.', { amount: amount | numeral }) }}</p>
 
   {% if mediation %}
@@ -67,10 +69,12 @@
   {% else %}
     {{ statesPaidRejectedMediationNODefendantClaimDetails(claim) }}
   {% endif %}
+
+  <p>{{ downloadResponseLink(claim) }}</p>
 {% endmacro %}
 
 {% macro statesPaidRejectedMediationYESDefendantClaimDetails(claim) %}
-  <p>{{ t('They’ve agreed to try mediation. We’ll contact you with details of your appointment.') }}</p>
+  <p>{{ t('They agreed to try mediation. We’ll contact you with details of your appointment.') }}</p>
 {% endmacro %}
 
 {% macro statesPaidRejectedMediationNODefendantClaimDetails(claim) %}
@@ -85,8 +89,4 @@
       }
     ) | safe
     }}</p>
-{% endmacro %}
-
-{% macro _downloadResponseLink(claim, text) %}
-  <a href="{{ ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t(text) }}</a>
 {% endmacro %}
