--- a/src/main/features/directions-questionnaire/views/hearing-location.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-location.njk
@@ -25,6 +25,19 @@
               <p>{{ t('Tell us your preferred location for a hearing, in case the claim goes to one.') }}</p>
               <p>{{ t('We’ll use the location you choose unless the claimant has an exceptional reason to object, for example accessibility needs.') }}</p>
               <p>{{ t('You can choose any location - {{ courtName }} is the nearest to the home address you gave us.', { courtName: courtName }) }}</p>
+
+              <details class="form-group analytics-click-event-trigger" data-event-label="Response: Find out what each response means">
+                <summary>{{ t('See this court’s facilities') }}</summary>
+
+                <div class="panel">
+                  {% for facility in facilities %}
+                    <h3 class="heading-small form-group-related">{{ facility.name }}</h3>
+                    <p>{{ facility.description }}</p>
+                  {% endfor %}
+                </div>
+
+              </details>
+
             {% elseif party === MadeBy.CLAIMANT %}
               <p>{{ t('You can request any location - {{ courtName }} is the nearest to the home address you gave us.', { courtName: courtName }) }}
             {% endif %}
