--- a/src/main/features/directions-questionnaire/views/self-witness.njk
+++ b/src/main/features/directions-questionnaire/views/self-witness.njk
@@ -3,7 +3,7 @@
 {% from "date.njk" import dateInput %}
 {% from "form.njk" import yesNoRadio %}
 
-{% set heading = 'Do you want to give evidence as a witness?' %}
+{% set heading = 'Do you want to give evidence?' %}
 
 {% block content %}
   <div class="grid-row">
