--- a/src/main/features/directions-questionnaire/views/hearing-location.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-location.njk
@@ -24,12 +24,12 @@
             {% elseif party === MadeBy.DEFENDANT %}
               <p>{{ t('Tell us your preferred location for a hearing, in case the claim goes to one.') }}</p>
               <p>{{ t('We’ll use the location you choose unless the claimant has an exceptional reason to object, for example accessibility needs.') }}</p>
-              <p>{{ t('You can choose any location - {{ courtName }} is the nearest to the home address you gave us.', { courtName: courtName }) }}</p>
+              <p>{{ t('You can choose any location - {{ courtName }} is the nearest to your home address you gave us.', { courtName: courtName }) }}</p>
             {% elseif party === MadeBy.CLAIMANT %}
-              <p>{{ t('You can request any location - {{ courtName }} is the nearest to the home address you gave us.', { courtName: courtName }) }}
+              <p>{{ t('You can request any location - {{ courtName }} is the nearest to your home address you gave us.', { courtName: courtName }) }}
             {% endif %}
             <h1
-              class="heading-medium">{{ t('Do you want to choose {{ courtName }}', { courtName: form.valueFor('courtName') }) }}</h1>
+              class="heading-medium">{{ t('Do you want to choose {{ courtName }}?', { courtName: form.valueFor('courtName') }) }}</h1>
             {{ radioGroup(
               form = form,
               label = heading,
@@ -50,7 +50,7 @@
             ) }}
             <div class="js-hidden" id="courtAccepted-no">
               <h1 class="heading-medium">{{ t('Choose another court') }}</h1>
-              {{ radioOption(form = form, label = 'Enter court name', name = 'alternativeOption', value = 'name', checked = form.valueFor('alternativeOption') === 'name', bold = true) }}
+              {{ radioOption(form = form, label = 'Enter a court name', name = 'alternativeOption', value = 'name', checked = form.valueFor('alternativeOption') === 'name', bold = true) }}
               <div class="form-group panel panel-border-narrow js-hidden " id="alternativeOption-name" aria-hidden="false">
                 {{ textInput(label = 'Court name', form = form, name = 'alternativeCourtName', inputClass = 'form-control-1-30') }}
               </div>
