--- a/src/main/features/directions-questionnaire/views/permission-for-expert.njk
+++ b/src/main/features/directions-questionnaire/views/permission-for-expert.njk
@@ -6,7 +6,7 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      {% set name = 'requestPermissionForExpert' %}
+      {% set name = 'option' %}
 
       <form method="post"
         class="analytics-submit-event-trigger"
@@ -14,7 +14,20 @@
         data-event-label-from="{{ name }}" novalidate>
 
         {{ csrfProtection(csrf) }}
-        {{ yesNoRadio(t('Do you want to ask for the court’s permission to hire an expert?'), name, form) }}
+
+        {{
+        radioGroup(
+          label = heading,
+          name = name,
+          options = [
+          { label: t('Yes'), value: YesNoOption.YES.option, checked: (form.valueFor('option').option === YesNoOption.YES.option) },
+          { label: t('No'), value: YesNoOption.NO.option, checked: (form.valueFor('option').option === YesNoOption.NO.option) }
+        ],
+          form = form,
+          labelForScreenReadersOnly = true,
+          isInline = false
+        )
+        }}
         {{ saveAndContinueButton() }}
       </form>
     </div>
