--- a/src/main/features/directions-questionnaire/views/self-witness.njk
+++ b/src/main/features/directions-questionnaire/views/self-witness.njk
@@ -3,7 +3,7 @@
 {% from "date.njk" import dateInput %}
 {% from "form.njk" import yesNoRadio %}
 
-{% set heading = 'Do you want to give evidence as a witness?' %}
+{% set heading = 'Do you want to give evidence?' %}
 
 {% block content %}
   <div class="grid-row">
@@ -15,7 +15,7 @@
         <fieldset id="selfWitness[label]" class="form-group {% if error %} form-group-error {% endif %}">
           <legend>
             <span class="visuallyhidden">
-              {{ t('Do you want to give evidence as a witness?') }}
+              {{ t('Do you want to give evidence?') }}
             </span>
           </legend>
 
