--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -2,13 +2,16 @@
 
 {% set claimantName = claim.claimData.claimant.name %}
 
-<h2 class="heading-small">{{ t('If you agreed to try mediation') }}</h2>
-
-<p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation.', { claimantName: claimantName }) | safe }}</p>
-<p>{{ t('If they agree we’ll contact you to arrange an appointment. If not, we’ll tell you what to do.') }}</p>
-
-<h2 class="heading-small">{{ t('If you chose not to try mediation') }}</h2>
-<p>{{ t('We’ll contact you to tell you what to do.') }}</p>
+{% if claim.response.freeMediation === FreeMediationOption.YES %}
+  <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you with a date for an appointment. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
+{% else %}
+  <p>{{ t('You’ll have to go to a hearing.') }}</p>
+  <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
+      DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
+  <p>{{ t('Your defence will be cancelled if you don’t complete and return the form by 4pm on {{ deadline }}.',
+      { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+  <p>{{ t('We’ll contact you when we set a hearing date to tell you how to prepare.') }}</p>
+{% endif %}
 
 {% if claim.response.defenceType !== DefenceType.ALREADY_PAID %}
   <h2 class="heading-medium">{{ t('Settle out of court') }}</h2>
