--- a/src/main/features/directions-questionnaire/views/hearing-exceptional-circumstances.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-exceptional-circumstances.njk
@@ -5,7 +5,7 @@
 {% if party === MadeBy.CLAIMANT %}
   {% set heading = 'The hearing will be held at ' + courtName %}
 {% else %}
-  {% set heading = 'The hearing will be held at the claimant’s chosen court' %}
+  {% set heading = 'Do your accessibility needs mean you want to ask for the hearing to be held at a specific court?' %}
 {% endif %}
 
 {% block content %}
@@ -13,28 +13,68 @@
     <div class="column-two-thirds">
       {% if party === MadeBy.CLAIMANT %}
         <p>{{ t('The defendant chose this location.') }}</p>
+      {% else %}
+        <p>{{ t('If not, the hearing will be held at the court the claimant chooses.') }}</p>
       {% endif %}
       <form method="post" class="analytics-submit-event-trigger" data-event-action="DQ: Self Witness" data-event-label-from="selfWitness" novalidate>
         {{ csrfProtection(csrf) }}
 
         {% set error = form.hasErrors() %}
         <fieldset id="exceptionalCircumstances[label]" class="form-group {% if error %} form-group-error {% endif %}">
-          <legend>
-            <span class="visuallyhidden">
-              {{ t('Are there exceptional circumstances (like accessibility needs) which mean you want to ask for the hearing to be held at a different location?') }}
-            </span>
-          </legend>
 
-          <p>{{ t('Are there exceptional circumstances (like accessibility needs) which mean you want to ask for the hearing to be held at a different location?') }}</p>
-          {{
-          radioOption(form = form, label = 'Yes', name = 'exceptionalCircumstances', value = YesNoOption.YES.option, checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.YES.option, bold = true)
-          }}
-          <div class="form-group panel panel-border-narrow js-hidden " id="exceptionalCircumstances-yes" aria-hidden="false">
-            {{ textArea(label = t('Briefly explain your reasons'), form = form, name = 'reason', inputClass = 'form-control-3-4') }}
-          </div>
-          {{
-          radioOption(form = form, label = 'No', name = 'exceptionalCircumstances', value = YesNoOption.NO.option, checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.NO.option, bold = true)
-          }}
+          <legend class="visually-hidden">{{ t(heading) }}</legend>
+
+          {% if party === MadeBy.CLAIMANT %}
+          <h1 class="heading-medium">
+                {{ t('Does this court meet your accessibility needs?') }}
+            </h1>
+
+            {{
+            radioOption(
+              form = form,
+              label = 'Yes',
+              name = 'exceptionalCircumstances',
+              value = YesNoOption.YES.option,
+              checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.YES.option,
+              bold = true)
+            }}
+            {{
+            radioOption(
+              form = form,
+              label = 'No - I want to request a different court',
+              name = 'exceptionalCircumstances',
+              value = YesNoOption.NO.option,
+              checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.NO.option,
+              bold = true)
+            }}
+            <div class="form-group panel panel-border-narrow js-hidden " id="exceptionalCircumstances-no" aria-hidden="false">
+              {{ textArea(label = 'Briefly explain your reasons', form = form, name = 'reason', inputClass = 'form-control-3-4') }}
+            </div>
+          {% else %}
+
+            {{
+            radioOption(
+              form = form,
+              label = 'Yes',
+              name = 'exceptionalCircumstances',
+              value = YesNoOption.YES.option,
+              checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.YES.option,
+              bold = true)
+            }}
+            <div class="form-group panel panel-border-narrow js-hidden " id="exceptionalCircumstances-yes" aria-hidden="false">
+              {{ textArea(label = 'Briefly explain your reasons', form = form, name = 'reason', inputClass = 'form-control-3-4') }}
+            </div>
+            {{
+            radioOption(
+              form = form,
+              label = 'No',
+              name = 'exceptionalCircumstances',
+              value = YesNoOption.NO.option,
+              checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.NO.option,
+              bold = true)
+            }}
+
+          {% endif %}
 
         </fieldset>
 
