--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -500,7 +500,7 @@
 
         {{ submitButton('Submit response') }}
 
-        <input type="hidden" name="type" value="{{ statementOfTruthType }}">
+        <input type="hidden" name="type" value="{{ form.model.type }}">
       </div>
     </div>
   </form>
