Update check-and-send and add route test

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -453,6 +453,7 @@
           label = 'Briefly explain why you believe an expert is needed',
           value = directionsQuestionnaireDraft.whyExpertIsNeeded.explanation,
           changeLink = DirectionsQuestionnairePaths.whyExpertIsNeededPage.evaluateUri({ externalId: claim.externalId }),
+          bottomBorder = false,
           bold = true
         ) }}
       {% endif %}
