--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -4,6 +4,10 @@
 
 {% if claim.response.freeMediation === FreeMediationOption.YES %}
   <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you with a date for an appointment. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
+{% elif claim.response.directionsQuestionnaire.selfWitness %}
+  <p>{{ t('If {{ claimantName }} accepts your response the claim will be settled. We’ll contact you by post when they respond.', { claimantName: claimantName }) | safe }}</p>
+  <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
+  <p>{{ t('We’ll contact you by post if we set a hearing date to tell you how to prepare.') }}</p>
 {% else %}
   <p>{{ t('You’ll have to go to a hearing.') }}</p>
   <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
