--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -134,14 +134,9 @@
 {% macro claimRejectedDefendantDefenceFreeMediationYESForClaimantDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('You’ve rejected the defendant’s response.') }}</h2>
-
-    {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
     <p>{{ t('You’ve both agreed to try mediation. The Small Claims Mediation Service will contact you to arrange an appointment.') }}</p>
         {{ externalLink('Find out how mediation works', 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
-    {% endif %}
-
     <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
-
   </div>
 {% endmacro %}
 
@@ -187,4 +182,34 @@
 
 {% macro _respond(claim, text) %}
   <p>{{ internalLink(t(text), ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }), 'button button-primary') }}</p>
+{% endmacro %}
+
+{% macro claimRejectedFreeMediationNOWithoutDQsForClaimantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('The defendant has rejected your claim') }}</h2>
+    <p>{{ t('They said they dispute your claim.') }}</p>
+    {{ _linkToDirectionsQuestionnairePage(claim.externalId) }}
+    <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before 4pm on {{ deadline }}.',
+        { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+    <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
+  </div>
+{% endmacro %}
+
+{% macro claimRejectedFreeMediationNOWithoutDQsForDefendantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+    <p>{{ t('You’ve rejected the claim and said you don’t want to use mediation to solve it. You’ll have to go to a hearing.') }}</p>
+    {{ _linkToDirectionsQuestionnairePage(claim.externalId) }}
+    <p>{{ t('Your defence will be cancelled if you don’t complete and return the form before 4pm on {{ deadline }}.',
+        { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+    <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
+  </div>
+{% endmacro %}
+
+{% macro claimRejectedFreeMediationNOWithoutDQsForClaimantDashboard() %}
+  {{ t('You’ve rejected their defence. You need to tell us more about the claim.') }}
+{% endmacro %}
+
+{% macro claimRejectedFreeMediationNOWithoutDQsForDefendantDashboard() %}
+  {{ t('You’ve rejected the claim and suggested mediation. We’ll ask the claimant if they agree to take part in mediation.') }}
 {% endmacro %}
